--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -3,104 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap2 Refactored</title>
+    <title>Bootstrap Refactored Scroll Layout - Final</title>
 
-    <!-- Bootstrap 5.3.3 CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW2ALEwIH"
         crossorigin="anonymous"
     >
 
     <style>
+        /* 1. Base Styling */
         body {
-            background-color: #f8f9fa;
-            margin: 0;
-            font-family: "Segoe UI", Tahoma, sans-serif;
+            background-color: var(--bs-gray-100);
         }
 
-        /* Header/Footer */
-        header, footer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 28px;
-            font-weight: 700;
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-            padding: 18px 0;
-        }
-
-        header {
+        /* 2. Custom Gradient Styles */
+        .header-gradient {
             background: linear-gradient(90deg, #dc3545, #e4606d);
         }
 
-        footer {
+        .footer-gradient {
             background: linear-gradient(90deg, #0d6efd, #3b82f6);
         }
 
-        /* Horizontal scroll container */
+        /* 3. Horizontal Scroll Container */
         .scroll-container {
+            /* We remove the left/right padding (e.g., px-0) here so the parent can handle it. */
             display: flex;
             overflow-x: auto;
             scroll-snap-type: x mandatory;
             scroll-behavior: smooth;
-            padding: 20px 0;
-            gap: 20px;
+            /* Only vertical padding remains */
+            padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
+            gap: 1.5rem;
         }
 
         .scroll-container::-webkit-scrollbar {
             display: none;
         }
 
-        /* Scroll items */
+        /* 4. Scroll Items */
         .scroll-item {
             min-width: 300px;
             height: 60vh;
-            border-radius: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 26px;
-            font-weight: 600;
             scroll-snap-align: start;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             transition: transform 0.3s, box-shadow 0.3s;
-            color: white;
         }
 
         .scroll-item:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.3);
         }
-
-        /* Colors for scroll items */
-        .bg-warning { background-color: #ffc107 !important; color: black !important; }
-        .bg-success { background-color: #198754 !important; }
-        .bg-info { background-color: #0dcaf0 !important; color: black !important; }
-        .bg-primary { background-color: #0d6efd !important; }
-        .bg-danger { background-color: #dc3545 !important; }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <header>Bootstrap2 Horizontal Scroll Layout</header>
+    <header class="header-gradient text-white shadow-lg fw-bold d-flex justify-content-center align-items-center py-4 fs-4">
+        Bootstrap Refactored Scroll Layout
+    </header>
 
-    <!-- Scrollable Content -->
-    <div class="scroll-container">
-        <div class="scroll-item bg-warning">Left</div>
-        <div class="scroll-item bg-success">Center</div>
-        <div class="scroll-item bg-info">Right</div>
-        <div class="scroll-item bg-primary">Extra 1</div>
-        <div class="scroll-item bg-danger">Extra 2</div>
+    <div class="container-fluid px-5"> 
+        <div class="row">
+            <div class="col-12">
+                <div class="scroll-container">
+                    
+                    <div class="scroll-item bg-warning text-dark rounded-4 shadow-lg d-flex justify-content-center align-items-center fs-4 p-3">
+                        Item 1: Warning
+                    </div>
+                    <div class="scroll-item bg-success text-white rounded-4 shadow-lg d-flex justify-content-center align-items-center fs-4 p-3">
+                        Item 2: Success
+                    </div>
+                    <div class="scroll-item bg-info text-dark rounded-4 shadow-lg d-flex justify-content-center align-items-center fs-4 p-3">
+                        Item 3: Info
+                    </div>
+                    <div class="scroll-item bg-primary text-white rounded-4 shadow-lg d-flex justify-content-center align-items-center fs-4 p-3">
+                        Item 4: Primary
+                    </div>
+                    <div class="scroll-item bg-danger text-white rounded-4 shadow-lg d-flex justify-content-center align-items-center fs-4 p-3">
+                        Item 5: Danger
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Footer -->
-    <footer>Footer</footer>
+    <footer class="footer-gradient text-white shadow-lg fw-bold d-flex justify-content-center align-items-center py-3 fs-4 mt-auto">
+        Bootstrap Footer
+    </footer>
 
-    <!-- Bootstrap JS -->
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
